--- a/vcweb/subject_pool/templates/subject-pool/session_detail.html
+++ b/vcweb/subject_pool/templates/subject-pool/session_detail.html
@@ -19,7 +19,7 @@
         </div>
         <div id="error-messages"></div>
         <h3>List of Participants signed up for Experiment Session.</h3>
-        <form method="POST" id="participant-info" action="">
+        <form method="POST" id="participant-info" class="form-inline">
         {{ formset.management_form }}
             <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="participant-table">
                 <thead>
@@ -159,12 +159,17 @@
             } );
 
             $('#participant-table').dataTable( {
-                "sDom": "<'row'<'pull-right'f>r>t<'row'<'span6'i><'pull-right pagination'p>>",
-                "sWrapper": "dataTables_wrapper form-inline",
+                "sDom": "<<'pull-right'f>r>t<'col-md-6'i><'pull-right datatable-pager'p>",
+                "sWrapper": "dataTables_wrapper",
                 "sPaginationType": "bootstrap"
-            } );
+            });
 
-        } );
 
+                // SEARCH - Add the placeholder for Search and Turn this into in-line formcontrol
+                var search_input = $('#participant-table').closest('.dataTables_wrapper').find('div[id$=_filter] input');
+                search_input.attr('placeholder', 'Search')
+                search_input.addClass('form-control input-sm')
+                search_input.css('width', '150px')
+        });
     </script>
 {% endblock %}
