minor bug fixes

--- a/vcweb/lighterprints/templates/lighterprints/greenbutton-upload.html
+++ b/vcweb/lighterprints/templates/lighterprints/greenbutton-upload.html
@@ -12,8 +12,10 @@
 <h3>Green Button Data Upload</h3>
 <form id='vcweb-form' action='' method='post' enctype='multipart/form-data' class='form-horizontal'>
     {{ form }}
-    <div class='form-actions'>
-        <button type='submit' class='btn btn-primary'>Submit</button>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <button type='submit' class='btn btn-primary'>Submit</button>
+        </div>
     </div>
 </form>
 {% endblock page %}
