fixing modal box issues

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -9,7 +9,7 @@
     <div id='content' class='col-md-8'>
         <div data-bind='template: { name: templateId(), afterRender: afterRenderTemplate}'>
         </div>
-        <div id='progress-modal' class='modal hide fade'>
+        <div id='progress-modal' class='modal fade'>
             <div class='model-header'>
                 <h3>Updating experiment data</h3>
             </div>
