--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -270,7 +270,7 @@
        </div>
     </div>
 </div>
-<div id='activityPerformedModal' class='modal hide fade' tabindex='-1' role='dialog' aria-labelledby='activityPerformedModalLabel' aria-hidden='true'>
+<div id='activityPerformedModal' class='modal fade' tabindex='-1' role='dialog' aria-labelledby='activityPerformedModalLabel' aria-hidden='true'>
     <div class="modal-dialog">
         <div class="modal-content">
             <div class='modal-header'>
