--- a/vcweb/core/templates/account/login.html
+++ b/vcweb/core/templates/account/login.html
@@ -3,7 +3,7 @@
 {% block title %}Virtual Commons Web Login{% endblock %}
 {% block page %}
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-8">
         <h3>Returning User</h3>
             <p>Don&#39;t have an account or a first-time user?  Please <a href='{% url "core:register" %}'>register first</a>.</p>
             <p>If you've forgotten your password, you can <a href='{% url "password_reset" %}'>request a new one</a>.</p>
@@ -15,28 +15,16 @@
                   <button type='submit' class='btn btn-primary'><i class='fa fa-user'></i> Login</button>
                 </div>
             </div>
-            {% comment %}
-            FIXME: disabling social auth until its more thoroughly debugged (and we know what social platforms we want to
-            integrate with)
-            <br><br>
-            You can also register or sign in using your other social accounts:
-            <ul class="authbadges">
-                <!-- <li><a href="{% url socialauth_begin 'openid' %}">OpenID login</a></li> -->
-                <li><a href="{% url socialauth_begin 'twitter' %}"><img width="150", height="24" src="{{STATIC_URL}}images/oauth/sign-in-with-twitter_0.png"></a></li>
-                <li><a href="{% url socialauth_begin 'foursquare' %}"><img src="{{STATIC_URL}}images/oauth/foursquare-connect-black.png"></a></li>
-                <li><a href="{% url socialauth_begin 'facebook' %}"><img width="193", height="23" src="{{STATIC_URL}}images/oauth/facebook-connect-button.png"></a></li>
-            </ul>
-            {% endcomment %}
         </form>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
         <div class="cas-login">
             <p>
                 {% load staticfiles %}
                 <img src=" {% static "images/ASU/ASU_logo.jpg" %}" alt="ASU Logo" width="50%">
             </p>
             <p>
-                Login via ASU using your ASURITE User-ID and Password.
+                Login via ASURITE 
             </p>
             <div id="login_submit">
                 <a href="{% url 'cas.views.login' %}" class='submit'>Sign In</a>
