--- a/vcweb/core/templates/account/login.html
+++ b/vcweb/core/templates/account/login.html
@@ -1,23 +1,25 @@
 {% extends "forms/base.html" %}
-
+{% load bootstrap3 %}
 {% block title %}Virtual Commons Web Login{% endblock %}
 {% block page %}
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-6">
         <h3>Returning User</h3>
             <p>Don&#39;t have an account or a first-time user?  Please <a href='{% url "core:register" %}'>register first</a>.</p>
             <p>If you've forgotten your password, you can <a href='{% url "password_reset" %}'>request a new one</a>.</p>
-        <form id='vcweb-form' method='post' class='form-horizontal'>
+
+
+        <form id='vcweb-form' role="form" class="form-horizontal" method="post">
             {% csrf_token %}
-            {% include "includes/bootstrap-form.html" %}
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                  <button type='submit' class='btn btn-primary'><i class='fa fa-user'></i> Login</button>
-                </div>
-            </div>
+            {%  bootstrap_form form layout="horizontal" field_class="col-md-6"%}
+            {% buttons layout='horizontal'%}
+                <button type="submit" class="btn btn-primary">
+                    <i class='fa fa-user'></i> Login
+                </button>
+            {% endbuttons %}
         </form>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-6">
         <div class="cas-login">
             <p>
                 {% load staticfiles %}
